--- a/student-work/thank-you.qmd
+++ b/student-work/thank-you.qmd
@@ -2,4 +2,12 @@
 title: "Thank you"
 ---
 
-To be posted.
+Each of these thank you cards are made in R with ggplot2 by students in STA/ISS 313. A huge thanks to all of our guest speakers!
+
+```{r}
+#| out-width: "80%"
+#| echo: false
+#| fig-alt: Thank you cards created with ggplot2.
+thank_you_paths <- fs::dir_ls("images/thank-you-cards", regexp = "*md", invert = TRUE)
+knitr::include_graphics(thank_you_paths)
+```
