--- a/hw/hw-3.qmd
+++ b/hw/hw-3.qmd
@@ -19,33 +19,39 @@ If they pass, you'll see a green badge on your repository README and you won't g
 Up until the deadline, it doesn't matter how many times these checks fail. Just make sure by the end the badge is green.
 :::
 
-1.  **Du Bois challenge.** Recreate the following visualization by W.E.B. Du Bois on family budgets split by income classes for 150 families in Atlanta, Georgia. This visualization was originally created using ink and watercolors.
+## Question 1
 
-    ![](images/income-expenditures-orig.jpg)
+**Du Bois challenge.** Recreate the following visualization by W.E.B. Du Bois on family budgets split by income classes for 150 families in Atlanta, Georgia. This visualization was originally created using ink and watercolors.
 
-    Notes for recreation:
+![](images/income-expenditures-orig.jpg)
 
-    -   Use the `data/income.csv` as your starting point.
+Notes for recreation:
 
-    -   You do not need to recreate (1) the plot title, (2) the dollar coin (the circle on top left) and the arched "Annual Income" text above it, (3) the image and tiny text inside the legend box.
+-   Use the `data/income.csv` as your starting point.
 
-    -   It is also ok if your y-axis isn't a table like the one shown on the plot, but you want to make sure you do have the income ranges styled as closely as possible to the plot.
+-   You do not need to recreate (1) the plot title, (2) the dollar coin (the circle on top left) and the arched "Annual Income" text above it, (3) the image and tiny text inside the legend box.
 
-    -   To change the background of the plot to match the background of the original visualization, look for an image of a "parchment paper" on a free image site like Pixabay ([https://pixabay.com](https://pixabay.com/)) and place the image file in your `images/` folder and the image in the background of the plot.
+-   It is also ok if your y-axis isn't a table like the one shown on the plot, but you want to make sure you do have the income ranges styled as closely as possible to the plot.
 
-    -   You are welcomed to use the steps outlined in `ae-07` to recreate this, but you do not have to. You can do it all in one step as well. Note that the steps contain good hints though, so if you're struggling, make sure to look there first.
+-   To change the background of the plot to match the background of the original visualization, look for an image of a "parchment paper" on a free image site like Pixabay ([https://pixabay.com](https://pixabay.com/)) and place the image file in your `images/` folder and the image in the background of the plot.
 
-2.  **COVID survey - interpret.** A survey was conducted on the attitudes and opinions towards COVID-19 vaccination held by medical and nursing students across the US. The data were collected by Pavan Shah, Giorgio Caturegli, Galen Shi, and Joshua Materi at Johns Hopkins School of Medicine. Huge thanks to Giorgio Caturegli for sharing the data with us! The following visualization was created based on the survey results.
+-   You are welcomed to use the steps outlined in `ae-07` to recreate this, but you do not have to. You can do it all in one step as well. Note that the steps contain good hints though, so if you're struggling, make sure to look there first.
 
-    Each facet in the visualization represents a response-explanatory variable combination. The response variables are in the columns and the explanatory variables are in the rows of the grid. For each response variable the survey takers indicated their level of agreement with the given statement. The responses were on a Likert scale: 1 - Strongly Agree, 2 - Somewhat Agree , 3 - Neither Agree Nor Disagree, 4 - Somewhat Disagree, 5 - Strongly Disagree.
+## Question 2
 
-    Within each facet the data are represented with points (indicating the mean Likert score) and error bars spanning from 10th to 90th percentiles of the values of the response variable for each level of the explanatory variable. The first row is the only exception to this. This row of panes is noted as "All", meaning that the it’s the distribution of each of the response variables without conditioning on any of the explanatory variables.
+**COVID survey - interpret.** A survey was conducted on the attitudes and opinions towards COVID-19 vaccination held by medical and nursing students across the US. The data were collected by Pavan Shah, Giorgio Caturegli, Galen Shi, and Joshua Materi at Johns Hopkins School of Medicine. Huge thanks to Giorgio Caturegli for sharing the data with us! The following visualization was created based on the survey results.
 
-    Your task for this question is to take a close look at this plot and interpret it. There is a lot going on here, which is customary for plots that go into scientific publications – they tend to be very information dense, for better or worse… As you interpret it, discuss if there are any results that agree or disagree with your intuition. There is a lot you can say, but we don’t need you to be exhaustive. Please provide three concrete examples.
+Each facet in the visualization represents a response-explanatory variable combination. The response variables are in the columns and the explanatory variables are in the rows of the grid. For each response variable the survey takers indicated their level of agreement with the given statement. The responses were on a Likert scale: 1 - Strongly Agree, 2 - Somewhat Agree , 3 - Neither Agree Nor Disagree, 4 - Somewhat Disagree, 5 - Strongly Disagree.
 
-    ![](images/plot-10-90-1.png)
+Within each facet the data are represented with points (indicating the mean Likert score) and error bars spanning from 10th to 90th percentiles of the values of the response variable for each level of the explanatory variable. The first row is the only exception to this. This row of panes is noted as "All", meaning that the it’s the distribution of each of the response variables without conditioning on any of the explanatory variables.
 
-3.  **COVID survey - reconstruct.** In this exercise you will reconstruct the plot provided in Exercise 2. You can find the raw data in `data/survey.csv`. Additional information on the survey can be found in `data/covid_survey.pdf`.
+Your task for this question is to take a close look at this plot and interpret it. There is a lot going on here, which is customary for plots that go into scientific publications – they tend to be very information dense, for better or worse… As you interpret it, discuss if there are any results that agree or disagree with your intuition. There is a lot you can say, but we don’t need you to be exhaustive. Please provide three concrete examples.
+
+![](images/plot-10-90-1.png)
+
+## Question 3
+
+**COVID survey - reconstruct.** In this exercise you will reconstruct the plot provided in Exercise 2. You can find the raw data in `data/survey.csv`. Additional information on the survey can be found in `data/covid_survey.pdf`.
 
 -   Load the data using `read_csv()`. View the result and decide if any rows on top need to be `skip`ped. If so, reload again with the `skip` argument. Print the dimensions of the resulting data frame with `dim()`.
 
@@ -193,12 +199,16 @@ covid_survey_summary_stats
     -   The `facet_grid()` function, which you will need to use to reconstruct this plot, has a `labeller` argument, which you can use to define how you want to add line breaks to facet labels. For example, `labeller = labeller = labeller(explanatory = label_wrap_gen(15))` places a line break after 15 characters on the labels of the facets defined by the `explanatory` variable.
     -   Don’t worry about matching the exact color for the background of the facet labels. But, if you want to match, the color is `gray90`.
 
-4.  **COVID survey - re-reconstruct.** One way to evaluate if there’s anything misleading in the following plot would be to reconstruct it using quartiles different than the 10th and the 90th percentile. Repeating as little of the code you developed so far as possible, reconstruct the same plot where the ends of the error bars are the 25th and 75th percentiles of the distributions of each of the response variables conditioned on the levels of each of the explanatory variables. How does this plot compare to the plot you constructed in Exercise 2? Does it change any of your conclusions about the data? Explain your reasoning.
+## Question 4
 
-5.  **COVID survey - another view.** Create two bar charts of the Likert data for the six survey questions in from the plot in Exercise 2. This should be a single plot visualizing the percentages of each possible answer, with different questions on the y-axis. Use an appropriate color scale.
+**COVID survey - re-reconstruct.** One way to evaluate if there’s anything misleading in the following plot would be to reconstruct it using quartiles different than the 10th and the 90th percentile. Repeating as little of the code you developed so far as possible, reconstruct the same plot where the ends of the error bars are the 25th and 75th percentiles of the distributions of each of the response variables conditioned on the levels of each of the explanatory variables. How does this plot compare to the plot you constructed in Exercise 2? Does it change any of your conclusions about the data? Explain your reasoning.
 
-    a.  Create a diverging bar chart. Write alt text for your visualization as well.
+## Question 5
 
-    b.  Create a 100% bar chart. Write alt text for your visualization as well.
+**COVID survey - another view.** Create two bar charts of the Likert data for the six survey questions in from the plot in Exercise 2. This should be a single plot visualizing the percentages of each possible answer, with different questions on the y-axis. Use an appropriate color scale.
 
-    c.  Comment on how the two charts from parts (a) and (b) compare with regards to comparability.
+a.  Create a diverging bar chart. Write alt text for your visualization as well.
+
+b.  Create a 100% bar chart. Write alt text for your visualization as well.
+
+c.  Comment on how the two charts from parts (a) and (b) compare with regards to comparability.
