--- a/slides/10/10-pres-ready-plots-I.qmd
+++ b/slides/10/10-pres-ready-plots-I.qmd
@@ -32,6 +32,7 @@ library(patchwork)
 library(tidytext)
 library(hrbrthemes)
 library(scales)
+library(textdata)
 
 # set theme for ggplot2
 ggplot2::theme_set(ggplot2::theme_minimal(base_size = 16))
