--- a/slides/13/13-spatial-I.qmd
+++ b/slides/13/13-spatial-I.qmd
@@ -16,7 +16,7 @@ editor_options:
 
 -   Reading Quiz 4 due Tuesday after Spring Break
 -   Review Project 2 instructions before leaving for Spring Break and think about things you'd like to work on and let me know any team preferences (by Friday of this week)
--   No class on Thursday, additonal office hours by Eli during class time in Old Chem 203
+-   No class on Thursday, additional office hours by Eli during class time in Old Chem 203
 
 ## Setup
 
