--- a/slides/13/13-spatial-I.qmd
+++ b/slides/13/13-spatial-I.qmd
@@ -17,6 +17,8 @@ editor_options:
 -   Reading Quiz 4 due Tuesday after Spring Break
 -   Review Project 2 instructions before leaving for Spring Break and think about things you'd like to work on and let me know any team preferences (by Friday of this week)
 -   No class on Thursday, additional office hours by Eli during class time in Old Chem 203
+-   HW 3 - due Thursday at 5 pm.
+    -   Will push fix for data error later this afternoon. You'll need to pull before you can push again
 
 ## Setup
 
