--- a/slides/14/14-spatial-II.qmd
+++ b/slides/14/14-spatial-II.qmd
@@ -46,17 +46,41 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Large data advice
+# Project 2
 
--   A note on how R / memory usage
+## Project 2 - potential directions
 
--   [`rm()` and `gc()`](https://stackoverflow.com/questions/8813753/what-is-the-difference-between-gc-and-rm)
+-   Present and visualize a technical topic in statistics or mathematics, e.g., Gradient descent, quadrature, autoregressive (AR) models, etc.
 
--   Options:
+-   Build a Shiny app that that has an Instagram-like user interface for applying filters, except not filters but themes for ggplots.
 
-    -   Data larger than can be uploaded to container: (Maybe) Adding to the container directly (via OIT)
+-   Create an R package that provides functionality for a set of ggplot2 themes and/or color palettes.
 
-    -   Data too large for Github, but not too large to be uploaded to container: `gitignore`ing and adding to each container individually
+-   Build a generative art system.
+
+-   Do a deep dive into accessibility for data visualization and build a lesson plan for creating accessible visualizations with ggplot2, R Markdown, and generally within the R ecosystem.
+
+-   Create an interactive and/or animated spatio-temporal visualization on a topic of interest to you, e.g., redistricting, COVID-19, voter suppression, etc.
+
+-   Recreate art pieces with ggplot2.
+
+-   Make a data visualization telling a story and convert it to an illustration, presenting both the computational and artistic piece side by side.
+
+-   Build a dashboard.
+
+-   Or… Visualize a (non-TidyTuesday) dataset, answering a research question of interest to you.
+
+## Project 2 - all the details
+
+[https://vizdata.org/project/project-2.html](https://vizdata.org/project/project-2)
+
+::: callout-tip
+Brainstorm a bunch of ideas and discard them until you settle on a topic that everyone in the team is happy with and feels like a good choice for showcasing what you’ve learned in the class and how you can use that to learn something new and implement for your project.
+:::
+
+## Project 2 - inspiration
+
+![](images/smf.png){fig-align="center" width="350"}
 
 # Spatial data in R
 
