--- a/hw/hw-4.qmd
+++ b/hw/hw-4.qmd
@@ -37,7 +37,7 @@ Each of the following questions ask you to reproduce a plot. You must use ggplot
 
 ## Question 2
 
-**New York state of counties.** Using the **tigris** package, download the shapefile for counties in the state of New York (NY) for year 2021. Cache the code chunk where this action is done so the shapefile isn’t downloaded each time you render. Then, in a separate code chunk, plot thee county boundaries and label them. The word “County” should be omitted from the labels to keep them shorter, appropriate labels should be used, including a caption that mentions the data source, and the figure should be sized such that all labels are visible.
+**New York state of counties.** Using the **tigris** package, download the shapefile for counties in the state of New York (NY) for year 2021. Cache the code chunk where this action is done so the shapefile isn’t downloaded each time you render. Then, in a separate code chunk, plot the county boundaries and label them. The word “County” should be omitted from the labels to keep them shorter, appropriate labels should be used, including a caption that mentions the data source, and the figure should be sized such that all labels are visible. It's ok if your labels are not placed in the exact same locations as the provided figure.
 
 **Hint:** When downloading the shape file, set `progress_bar = FALSE` so that the progress bar isn’t printed in your rendered document.
 
@@ -57,7 +57,7 @@ Next, fill in the color of the counties based on total population change from 20
 
 **New York state of regions.** TL;DR: Reproduce the figure below. But you’re going to want to read more…
 
-New York State is divided into 10 regions along county boundaries. These regions are given in the CSV file called `ny_regions.csv` in your `data` folder. Merge in the region information to the data frame you have plotted in the previous exercise so that you have a new variable called `region` in your data frame. Then, create a new `sf` object that has the boundaries of the regions in its `sf_column` attribute, i.e., under `geometry`. Then, overlay this new `sf` object on the figure you created in the previous exercise, using a thicker line (`linewidth = 1`) to indicate region boundaries.
+New York State is divided into 10 regions along county boundaries. These regions are given in the CSV file called `ny_regions.csv` in your `data` folder. Merge in the region information to the data frame you have plotted in the previous exercise so that you have a new variable called `region` in your data frame. Then, create a new `sf` object that has the boundaries of the regions in its `sf_column` attribute, i.e., under `geometry`. Then, overlay this new `sf` object on the figure you created in the previous exercise, using a thicker line (`linewidth = 1`) to indicate region boundaries. It's ok if your labels are not placed in the exact same locations as the provided figure.
 
 **Hints:**
 
@@ -70,7 +70,7 @@ New York State is divided into 10 regions along county boundaries. These regions
 
 **New York state of patchwork.** TL;DR: Reproduce the figure below. But you’re going to want to read more…
 
-What we’re seeing is that what is happening in the New York City region is very different than the rest of New York State, which is probably not too surprising. So, let’s make it a bit easier to see each of the counties in New York City by insetting a zoomed-in version of that portion of the map.
+What we’re seeing is that what is happening in the New York City region is very different than the rest of New York State, which is probably not too surprising. So, let’s make it a bit easier to see each of the counties in New York City by insetting a zoomed-in version of that portion of the map. It's ok if your labels are not placed in the exact same locations as the provided figure.
 
 **Hint:** The `inset_element()` function from the **patchwork** package will be helpful!
 
